--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dashboardge</title>
+    <title>Dashboard Financeiro | VictorVzx</title>
   </head>
   <body>
     <div id="root"></div>
